syntax = "proto3";

service MyService {
  rpc MyMethod(RequestMessage) returns (ResponseMessage) {}
}

message RequestMessage {
  string name = 1;
}

message ResponseMessage {
  string message = 1;
}

option go_package = ".;main";
